# mvqcalc

./: Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.in
share/: gtkrc.dark  main_window.glade  matrix_result_toolbar.glade  matrix_toolbar.glade  matrix_widget.glade  memory_toolbar.glade  quaternion_result_toolbar.glade  quaternion_toolbar.glade  quaternion_widget.glade  recall_toolbar.glade  scalar_widget.glade  vector_result_toolbar.glade  vector_toolbar.glade  vector_widget.glade
src/: Makefile.am  Makefile.in  mathlib.c  mathlib.h  mvqcalc.c
